// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License. protoc -I rpc/ rpc/Polaris.proto --go_out=plugins=grpc:rpc


syntax = "proto3";

package rpc;
import "common.proto";
service Polaris {
    rpc OrderRequest(SLRequestMessage) returns (LeaderIdReply) {}
    rpc GetOrder(BftRequest) returns (stream BftReply) {}
    rpc Verify(VerifyRequest) returns (VerifyStatus) {}
}

message BftRequest {
    bytes signature = 1;
}

message BftReply {
    int64 sequence = 1;
    int64 view = 2;
    int64 nonce = 3;
    fixed32 last_cycle = 4;
    fixed32 current_cycle = 5;
    string commit_proof = 6; //#proof
    repeated SLRequestMessage messageList = 7;
}

message VerifyStatus {
    bool status = 1; //0 failed 1 success
}

message VerifyRequest{
    int64 sequence = 1;
    int64 view = 2;
    string commit_proof = 3; 
    string request_digest = 4;
}
